25-Nov-2018  - V0.18 Add support for FASTA format
 1-Dec-2018  - V0.19 Add support for CSV and related delimited row formats
11-Dec-2018  - V0.20 Add comment filtering on input for CSV files
 6-Feb-2019  - V0.21 Add support for gzip compression as part of serializing mmCIF files,
                     add vrpt-xml-to-cif option and supporting method __deserializeVrptToCif()
 6-Mar-2019  - V0.22 Update installation dependencies and documentation
 9-Mar-2019  - V0.23 Add implementations for stubbed out remote access.
 9-Mar-2019  - V0.24 Add URL locator test and import fix to resolve PY27 compatibility issue.
10-Mar-2019  - V0.25 Add FileUtils.exists() method
16-Mar-2019  - V0.26 Add class UrlRequestUtil() with general wrappers for common get and post
                     methods and associated tests.
17-Mar-2019  - V0.27 Return HTTP response codes in UrlRequestUtil() methods.
24-Mar-2019  - V0.28 Suppress error message on missing validation report file.
25-Mar-2019  - V0.29 Expose comment processing for csv/tdd files as keyword argument
 2-Apr-2019  - V0.30 Add comment option and compression handling to __deserializeList()
19-Jun-2019  - V0.31 Address linting issues and and adjustments for multi-type return values.
11-Jul-2019  - V0.32 add explicit py2 safe file decompression to avoid encoding problems
25-Jul-2019  - V0.33 Try to improve retention of ordering for json load
 9-Aug-2019  - V0.34 Added retry for all url or service requests
10-Aug-2019  - V0.35 Incorporate ElementTree parser for XML deserializer
11-Aug-2019  - V0.36 Migrate compress/uncompreess and toAscii methods
                     from IoUtil to FileUtil. In FileUtil, add __extractZipMember() method.
                     Add retry support for __fetchUrlx(). Replace urlibx version of __fetchUrlx
                     with a version that depends on  requests module to better support
                     redirection and authentication.  Add further unit tests for FileUtil.