@@ -3,3 +3,4 @@ requests >= 2.21.0
 mmcif >= 0.40
 rcsb.utils.validation >= 0.14
 backports.tempfile; python_version < "3.0"
+PyNaCl >= 1.3.0
